# workspace-hub

./: .gitignore  AGENTS.md  BUILD.sh  BUILD_AND_RUN.md  Cargo.toml  LICENSE  README.md  RUN-DEV.sh  install.sh
.agents/skills/manage-skills/: SKILL.md
.agents/skills/update-project-docs/: SKILL.md
.agents/skills/verify-implementation/: SKILL.md
.claude/: CLAUDE.md  LESSONS.md
.claude/skills/manage-skills/: SKILL.md
.claude/skills/update-project-docs/: SKILL.md
.claude/skills/verify-domain/: SKILL.md
.claude/skills/verify-implementation/: SKILL.md
app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/styles/: global.css  tokens.css
cli/: Cargo.toml
cli/src/: main.rs  output.rs
cli/src/commands/: memo.rs  memo_folder.rs  mod.rs  project.rs  schedule.rs  todo.rs
cli/tests/: cli_integration.rs  memo_cli.rs  project_cli.rs  schedule_cli.rs
core/: Cargo.toml
core/migrations/: V001__init.sql  V002__add_schedule.sql  V003__add_memo.sql  V004__add_project.sql  V005__priority_enum.sql  V006__add_project_application.sql  V007__add_memo_project.sql  V008__add_file_explorer.sql  V009__todo_date_policy.sql  V010__todo_calendar_indexes.sql
core/src/: db.rs  error.rs  lib.rs  paths.rs
core/src/models/: file_explorer.rs  memo.rs  mod.rs  project.rs  schedule.rs  todo.rs
core/src/repo/: file_explorer.rs  memo.rs  memo_folder.rs  memo_project.rs  mod.rs  project.rs  project_application.rs  project_directory.rs  schedule.rs  todo.rs
core/tests/: file_explorer_repo.rs  memo_folder_repo.rs  memo_repo.rs  project_repo.rs  repo_todo.rs  schedule_repo.rs
docs/: ADR.md  DB_SCHEMA.md  DEPLOY.md  DESIGN.md  PROJECT_OVERVIEW.md  SOURCE_MAP.md  icon-concepts.html
docs/design-drafts/: 2026-05-18-memo-editor-notes-style-design.md  2026-05-18-memo-editor-notes-style-plan.md  2026-05-18-memo-restructure-design.md  2026-05-18-memo-restructure-plan.md  2026-05-18-page-header-concepts.html  design-system.html  index.html
docs/superpowers/plans/: 2026-05-18-memo-drag-to-folder.md  2026-06-12-files-explorer.md
docs/superpowers/specs/: 2026-05-18-memo-drag-to-folder-design.md  2026-06-12-files-explorer-design.md
(+65 files in other folders)
