[workspace]
resolver = "2"
members = ["core", "cli", "app/src-tauri"]

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "MIT"

[workspace.dependencies]
workspace-hub-core = { path = "core" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
