[package]
name = "workspace-hub-app"
version = "0.1.0"
description = "workspace-hub desktop shell"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "workspace_hub_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
workspace-hub-core = { workspace = true }
rusqlite = { workspace = true }
